--- a/kubernetes/apps/flaresolverr/deployment.yaml
+++ b/kubernetes/apps/flaresolverr/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: flaresolverr
-          image: ghcr.io/flaresolverr/flaresolverr:v3.3.21
+          image: ghcr.io/flaresolverr/flaresolverr:v3.4.6
           ports:
             - containerPort: 8191
               protocol: TCP
@@ -33,4 +33,5 @@ spec:
               cpu: 100m
               memory: 256Mi
             limits:
+              cpu: 400m
               memory: 1Gi
