--- a/kubernetes/apps/immich-ml/deployment.yaml
+++ b/kubernetes/apps/immich-ml/deployment.yaml
@@ -25,9 +25,13 @@ spec:
               protocol: TCP
           resources:
             requests:
+              cpu: 250m
+              memory: 512Mi
               gpu.intel.com/i915: 1
             limits:
+              cpu: 1000m
               gpu.intel.com/i915: 1
+              memory: 2Gi
           volumeMounts:
             - mountPath: /cache
               name: immich-ml-cache
