monitoring: move FlareSolverr Grafana dashboard to monitoring namespace

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - grafana-oidc.sealedsecret.yaml
   - servicemonitor-cilium.yaml
   - dashboard-cilium.yaml
+  - dashboard-flaresolverr.yaml
   - alertmanager-telegram.sealedsecret.yaml
   - prometheusrule-homelab.yaml
 
