--- a/kubernetes/apps/flaresolverr/service.yaml
+++ b/kubernetes/apps/flaresolverr/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: flaresolverr
   namespace: flaresolverr
+  labels:
+    app: flaresolverr
 spec:
   type: ClusterIP
   ports:
