monitoring: fix FlareSolverr dashboard Status panel query

--- a/kubernetes/apps/monitoring/dashboard-flaresolverr.yaml
+++ b/kubernetes/apps/monitoring/dashboard-flaresolverr.yaml
@@ -36,7 +36,7 @@ data:
                 ]
               },
               "mappings": [
-                { "type": "value", "options": { "0": { "text": "UP", "color": "green" }, "1": { "text": "DOWN", "color": "red" } } }
+                { "type": "value", "options": { "1": { "text": "UP", "color": "green" }, "0": { "text": "DOWN", "color": "red" } } }
               ]
             }
           },
@@ -47,7 +47,7 @@ data:
           "type": "stat",
           "targets": [
             {
-              "expr": "up{job=\"flaresolverr\", namespace=\"flaresolverr\"} == 0",
+              "expr": "up{job=\"flaresolverr\", namespace=\"flaresolverr\"}",
               "legendFormat": "Status"
             }
           ]
