monitoring: silence Watchdog alert, raise FlareSolverr slow threshold to 120s

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -65,6 +65,9 @@ helmCharts:
               - receiver: 'null'
                 matchers:
                   - alertname = "InfoInhibitor"
+              - receiver: 'null'
+                matchers:
+                  - alertname = "Watchdog"
               - receiver: telegram
                 matchers:
                   - severity =~ "critical|warning"
