--- a/kubernetes/apps/sonarr/deployment.yaml
+++ b/kubernetes/apps/sonarr/deployment.yaml
@@ -19,18 +19,12 @@ spec:
     spec:
       containers:
         - name: sonarr
-          image: ghcr.io/hotio/sonarr:release
+          image: ghcr.io/hotio/sonarr:release-4.0.16.2944
           ports:
             - containerPort: 8989
               protocol: TCP
               name: http
           env:
-            - name: PUID
-              value: "1026"
-            - name: PGID
-              value: "100"
-            - name: TZ
-              value: Europe/Lisbon
             - name: SONARR__POSTGRES__HOST
               value: "192.168.202.1"
             - name: SONARR__POSTGRES__PORT
