--- a/kubernetes/apps/radarr/deployment.yaml
+++ b/kubernetes/apps/radarr/deployment.yaml
@@ -54,6 +54,32 @@ spec:
               name: config
             - mountPath: /synology
               name: media
+        - name: exportarr
+          image: ghcr.io/onedr0p/exportarr:v2.0.1
+          args: ["radarr"]
+          ports:
+            - containerPort: 9708
+              protocol: TCP
+              name: metrics
+          env:
+            - name: PORT
+              value: "9708"
+            - name: URL
+              value: "http://localhost:7878"
+            - name: APIKEY
+              valueFrom:
+                secretKeyRef:
+                  name: radarr-secrets
+                  key: RADARR__AUTH__APIKEY
+            - name: ENABLE_ADDITIONAL_METRICS
+              value: "true"
+          resources:
+            requests:
+              cpu: 10m
+              memory: 32Mi
+            limits:
+              cpu: 100m
+              memory: 64Mi
       volumes:
         - name: config
           persistentVolumeClaim:
