--- a/kubernetes/apps/sonarr/deployment.yaml
+++ b/kubernetes/apps/sonarr/deployment.yaml
@@ -48,6 +48,32 @@ spec:
               name: config
             - mountPath: /synology
               name: media
+        - name: exportarr
+          image: ghcr.io/onedr0p/exportarr:v2.0.1
+          args: ["sonarr"]
+          ports:
+            - containerPort: 9707
+              protocol: TCP
+              name: metrics
+          env:
+            - name: PORT
+              value: "9707"
+            - name: URL
+              value: "http://localhost:8989"
+            - name: APIKEY
+              valueFrom:
+                secretKeyRef:
+                  name: sonarr-secrets
+                  key: SONARR__AUTH__APIKEY
+            - name: ENABLE_ADDITIONAL_METRICS
+              value: "true"
+          resources:
+            requests:
+              cpu: 10m
+              memory: 32Mi
+            limits:
+              cpu: 100m
+              memory: 64Mi
       volumes:
         - name: config
           persistentVolumeClaim:
