--- a/kubernetes/apps/sonarr/deployment.yaml
+++ b/kubernetes/apps/sonarr/deployment.yaml
@@ -54,17 +54,12 @@ spec:
             - sonarr
             - --port=9707
             - --url=http://localhost:8989
+            - --config=/config/config.xml
             - --enable-additional-metrics
           ports:
             - containerPort: 9707
               protocol: TCP
               name: metrics
-          env:
-            - name: API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: sonarr-secrets
-                  key: SONARR__AUTH__APIKEY
           resources:
             requests:
               cpu: 10m
@@ -72,6 +67,10 @@ spec:
             limits:
               cpu: 100m
               memory: 64Mi
+          volumeMounts:
+            - mountPath: /config
+              name: config
+              readOnly: true
       volumes:
         - name: config
           persistentVolumeClaim:
