--- a/kubernetes/apps/external-dns/kustomization.yaml
+++ b/kubernetes/apps/external-dns/kustomization.yaml
@@ -26,6 +26,7 @@ helmCharts:
               key: api-token
       extraArgs:
         cloudflare-dns-records-per-page: "5000"
+        cloudflare-dns-record-comment: "managed by external-dns"
         traefik-disable-legacy: null
       sources:
         - ingress
