seerr: add fsGroup 1000 to fix permission denied on config volume

--- a/kubernetes/apps/seerr/deployment.yaml
+++ b/kubernetes/apps/seerr/deployment.yaml
@@ -17,6 +17,9 @@ spec:
       labels:
         app: seerr
     spec:
+      securityContext:
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
       containers:
         - name: seerr
           image: ghcr.io/seerr-team/seerr:v3.0.1
