reseal telegram token, add cloudflare grafana dashboard

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - alertmanager-telegram.sealedsecret.yaml
   - prometheusrule-homelab.yaml
   - cf-metrics-scrape.sealedsecret.yaml
+  - dashboard-cloudflare.yaml
 
 helmCharts:
   - name: kube-prometheus-stack
